--- a/views/cart/unifiedCart.ejs
+++ b/views/cart/unifiedCart.ejs
@@ -207,7 +207,7 @@
                     <td>
                       <form action="/cart/delete/<%= item._id %>" method="POST">
                         <button type="submit" class="delete-button" 
-                                style="background-color: black; color: white;">Delete</button>
+                                style="background-color: rgb(117, 0, 0); color: white;">Delete</button>
                       </form>
                     </td>
                   </tr>
