--- a/views/rentals/rent-items.ejs
+++ b/views/rentals/rent-items.ejs
@@ -64,6 +64,8 @@
               <div class="product-info">
                 <h3><%= product.title %></h3>
                 <p class="price">Price: <%= product.price %> per <%= product.rate %></p>
+                <p><%= product.location %></p>
+                <p>Status: <strong><%= product.isAvailable ? 'Available' : 'Unavailable' %></strong></p>
                 
                 <div class="button-group vertical">
                   <a href="/rental/details/<%= product.id %>" class="view-details-button">View Details</a>
