--- a/views/subscriptionSwapping/buy.ejs
+++ b/views/subscriptionSwapping/buy.ejs
@@ -99,8 +99,8 @@
         </a>
         </div>
 
-        <% for (let product of prods) { %>
-          
+        <% for (let product of prods) { 
+          if (!product.buyer) { %>     
           <div class="rental-item">
             <div class="product-card">
               <div class="card__image">
@@ -144,7 +144,7 @@
               </div>
             </div>
           </div>
-        <% } %>
+        <% }} %>
       </div>
     <% } else { %>
       <h1>No Products Found!</h1>
