--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -428,7 +428,7 @@
       <ul>
         <% rentalProducts.forEach(product => { %>
         <li>
-          <a href="/rental/details/<%= product._id %>" style="text-decoration: none; color: #007bff;">
+          <a href="/profile/rentals/<%= product._id %>" style="text-decoration: none; color: #007bff;">
             <h4>Product: <%= product.title %></h4>
             <% if (product.buyer) { %>
             <h4>Buyer: <%= product.buyer.fullName %></h4>
@@ -451,12 +451,12 @@
 
     <!-- Direct Purchase (Second Hand) Products Section -->
     <div class="direct-products-card">
-      <h3>Your Direct Purchase Products</h3>
+      <h3>Your Direct SecondHand Purchase Products</h3>
       <% if (directSecondhandProducts && directSecondhandProducts.length > 0) { %>
       <ul>
         <% directSecondhandProducts.forEach(product => { %>
         <li>
-          <a href="/direct/details/<%= product._id %>" style="text-decoration: none; color: #007bff;">
+          <a href="/profile/secondHand/<%= product._id %>" style="text-decoration: none; color: #007bff;">
             <h4>Product: <%= product.title %></h4>
             <% if (product.buyer) { %>
             <h4>Buyer: <%= product.buyer.fullName %></h4>
@@ -484,7 +484,7 @@
       <ul>
         <% directSubscriptionProducts.forEach(product => { %>
         <li>
-          <a href="/subscription/details/<%= product._id %>" style="text-decoration: none; color: #007bff;">
+          <a href="/profile/subscription/<%= product._id %>" style="text-decoration: none; color: #007bff;">
             <h4>Product: <%= product.platform_name %></h4>
             <% if (product.buyer) { %>
             <h4>Buyer: <%= product.buyer.fullName %></h4>
