--- a/views/secondHand/buy.ejs
+++ b/views/secondHand/buy.ejs
@@ -203,6 +203,7 @@
                 </div>
                 <p class="description"><%= product.description %></p>
                 <p class="location"><%= product.location %></p>
+                <p class="quantity">Quantity: <%= product.quantity %></p>
                 <p class="seller">
                   <b>Seller:</b> <%= product.seller && product.seller.fullName ? product.seller.fullName : 'Unknown' %>
                 </p>
